--- a/Frontend/src/login.css
+++ b/Frontend/src/login.css
@@ -1,31 +1,42 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Hanken+Grotesk:wght@500;700;800&family=Inter&display=swap');
 
 * {
     box-sizing: border-box;
 
 }
-.font-family-header{
+
+.font-family-header {
     /* font-family: 'Great Vibes', cursive; */
     font-size: 40px;
 }
-/* .text-color {
+
+.text-color {
     color: white;
-} */
+}
+
+.text-alignment {
+    text-align: start;
+}
 
 body {
     font-family: 'Hanken Grotesk', sans-serif;
-    /* background: rgb(121, 90, 172);
-    background: linear-gradient(90deg, rgba(121, 90, 172, 1) 0%, rgba(123, 73, 170, 1) 33%, rgba(117, 123, 69, 1) 100%); */
-    
+    background: rgb(174, 0, 255);
+    background: linear-gradient(167deg, rgba(174, 0, 255, 1) 0%, rgba(123, 73, 170, 1) 43%, rgba(22, 144, 205, 1) 100%);
+
 }
-.logo{
+
+.logo {
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
-.logo img{
-    width: 140px;
+
+.logo img {
+    width: 110px;
 }
+
 .container {
     padding: 0 80px;
 }
@@ -48,13 +59,26 @@ body {
     border-bottom-left-radius: 10px;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     width: 80%;
     padding: 50px 40px;
 }
 
-/* .title::before {
+/* .heading{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+}
+.heading span{
+    text-align: none;
+
+} */
+
+
+.title::before {
     content: "";
-    background: url('./images/art.jpg') no-repeat center center/cover;
+    background: url('../images/title_background.jpg') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -63,11 +87,11 @@ body {
     z-index: -1;
     opacity: 0.80;
 
-} */
+}
 
 .input {
     background-color: rgba(255, 255, 255, 0.634);
-    border: 1px solid #e3e3e3;
+    /* border: 1px solid #e3e3e3; */
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     display: flex;
@@ -81,7 +105,7 @@ body {
 }
 
 .wrapper {
-    border: 1px solid #e3e3e3;
+    /* border: 1px solid #e3e3e3; */
     border-radius: 10px;
     display: flex;
     width: fit-content;
@@ -98,15 +122,17 @@ body {
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    margin: 19px 0px;
 }
 
 .textboxes input::placeholder {
     font-family: 'Hanken Grotesk', sans-serif;
+    font-style: normal;
 }
 
 .buttons {
     display: flex;
-    margin: 12px 0px;
+    margin: 90px 10px 0px 0px;
 }
 
 .icons {
