--- a/Frontend/src/login.css
+++ b/Frontend/src/login.css
@@ -20,8 +20,8 @@
 
 body {
     font-family: 'Hanken Grotesk', sans-serif;
-    background: rgb(174, 0, 255);
-    background: linear-gradient(167deg, rgba(174, 0, 255, 1) 0%, rgba(123, 73, 170, 1) 43%, rgba(22, 144, 205, 1) 100%);
+    /* background: rgb(174, 0, 255);
+    background: linear-gradient(167deg, rgba(174, 0, 255, 1) 0%, rgba(123, 73, 170, 1) 43%, rgba(22, 144, 205, 1) 100%); */
 
 }
 
@@ -37,7 +37,7 @@ body {
     width: 110px;
 }
 
-.container {
+.container-login {
     padding: 0 80px;
 }
 
@@ -53,8 +53,8 @@ body {
 .title {
     border: 1px solid #e3e3e3;
     position: relative;
-    /* background: url('./images/art.jpg') no-repeat center center/cover; */
-    /* background-color: rgba(0, 0, 0, 0.4); */
+    /* background: url('../images/art.jpg') no-repeat center center/cover; */
+    background-color: rgba(0, 0, 0, 0.4);
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     display: flex;
