--- a/Frontend/src/login.module.css
+++ b/Frontend/src/login.module.css
@@ -18,10 +18,10 @@
     text-align: start;
 }
 
-body {
+.log-in-page {
     font-family: 'Hanken Grotesk', sans-serif;
-    background: rgb(174, 0, 255);
-    background: linear-gradient(167deg, rgba(174, 0, 255, 1) 0%, rgba(123, 73, 170, 1) 43%, rgba(22, 144, 205, 1) 100%);
+    /* background: rgb(174, 0, 255);
+    background: linear-gradient(167deg, rgba(174, 0, 255, 1) 0%, rgba(123, 73, 170, 1) 43%, rgba(22, 144, 205, 1) 100%); */
 
 }
 
@@ -46,7 +46,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 80vh;
+    min-height: 100vh;
 
 }
 
@@ -54,7 +54,7 @@ body {
     border: 1px solid #e3e3e3;
     position: relative;
     /* background: url('./images/art.jpg') no-repeat center center/cover; */
-    /* background-color: rgba(0, 0, 0, 0.4); */
+    background-color: rgba(0, 0, 0, 0.4);
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     display: flex;
@@ -152,6 +152,6 @@ body {
 }
 
 .button:hover {
-    background-color: #999deea9;
+    background-color: #b2b5e3;
 
 }
