Added CSS to ProductListing page

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,5 +1,15 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Hanken+Grotesk:wght@500;700;800&family=Inter&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  font-family: var(--font-family);
+  
+}
+:root {
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -11,9 +21,13 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
+  -webkit-text-size-adjust: 100%; */
 
+  --primary-color: #999DEE;
+  --border-color: #E3E3E3;
+  --font-family: 'Hanken Grotesk', sans-serif;
+}
+/*
 a {
   font-weight: 500;
   color: #646cff;
@@ -67,8 +81,3 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Hanken+Grotesk:wght@500;700;800&family=Inter&display=swap');
-
-body{
-  font-family: 'Hanken Grotesk', sans-serif;
-}
