--- a/Frontend/src/login.module.css
+++ b/Frontend/src/login.module.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Hanken+Grotesk:wght@500;700;800&family=Inter&display=swap');
 
-* {
-    box-sizing: border-box;
-
-}
-
 .font-family-header {
     /* font-family: 'Great Vibes', cursive; */
     font-size: 40px;
@@ -18,12 +13,12 @@
     text-align: start;
 }
 
-.log-in-page {
+/* .log-in-page {
     font-family: 'Hanken Grotesk', sans-serif;
-    /* background: rgb(174, 0, 255);
-    background: linear-gradient(167deg, rgba(174, 0, 255, 1) 0%, rgba(123, 73, 170, 1) 43%, rgba(22, 144, 205, 1) 100%); */
+    background: rgb(174, 0, 255);
+    background: linear-gradient(167deg, rgba(174, 0, 255, 1) 0%, rgba(123, 73, 170, 1) 43%, rgba(22, 144, 205, 1) 100%); 
 
-}
+} */
 
 .logo {
     margin: 0;
