--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -25,18 +25,21 @@ body{
 
   --primary-color: #999DEE;
   --border-color: #E3E3E3;
+  --secondary-background-color: #E9E9E9;
   --font-family: 'Hanken Grotesk', sans-serif;
+  --accent-color: #7CD1D0;
 }
-/*
 a {
-  font-weight: 500;
-  color: #646cff;
+  color: var(--accent-color);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  /* color: #535bf2; */
+  cursor: pointer;
+  text-decoration: underline;
 }
 
+/*
 body {
   margin: 0;
   display: flex;
