Added registration.module.css file

--- a/Frontend/src/Registration.module.css
+++ b/Frontend/src/Registration.module.css
@@ -41,6 +41,7 @@
     background-color: white;
     border-radius: 130px 0px 0px 130px;
     margin-left: 45px;
+    text-align: center;
 }
 .form {
     display: flex;
