--- a/Frontend/src/Components/Button.module.css
+++ b/Frontend/src/Components/Button.module.css
@@ -6,6 +6,6 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     padding: 10px 38px;
     font-size: 18px;
-    background-color: var(--primary-color);
+    background-color: var(--button-color);
     color: white;
 }
