--- a/Frontend/src/login.module.css
+++ b/Frontend/src/login.module.css
@@ -73,7 +73,7 @@
 
 .title::before {
     content: "";
-    background: url('../images/title_background.jpg') no-repeat center center/cover;
+    background: url('./images/383627730_327638939837586_3616602466742477014_n.jpg') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
