--- a/Frontend/src/Components/Navbar.module.css
+++ b/Frontend/src/Components/Navbar.module.css
@@ -9,7 +9,7 @@
     margin: auto;
     width: 90%;
     height: 100px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     flex-direction: column;
 }
