--- a/Frontend/src/ProductListing.module.css
+++ b/Frontend/src/ProductListing.module.css
@@ -15,7 +15,7 @@
 
 .hero-section::before {
     content: "";
-    background: url('./assets/shop_page_logo.jpg') no-repeat center center/cover;
+    background: url('../images/shop_page_logo.jpg') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
