--- a/Frontend/src/Authentication.module.css
+++ b/Frontend/src/Authentication.module.css
@@ -10,9 +10,10 @@
     height: 1000px;
     background-color: rgb(0, 0, 0,0.5);
     z-index: 100;
+    position: fixed;
 }
 .back .container {
-    position: absolute;
+    position: fixed;
     width: 40%;
     height: 400px;
     margin: auto;
@@ -23,6 +24,11 @@
     transform: translate(-50%,-50%);
     border: 1px solid black;
     z-index: 1;
+}
+.back .container .bt {
+    width: 40px;
+    height: 40px;
+    float: right;
 }
 .inner {
     position: absolute;
