--- a/Frontend/src/SellerLogin.module.css
+++ b/Frontend/src/SellerLogin.module.css
@@ -41,7 +41,7 @@
 .title {
     border: 1px solid #e3e3e3;
     position: relative;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     display: flex;
@@ -66,7 +66,9 @@
 
 .title::before {
     content: "";
-    background: url('./images/383627730_327638939837586_3616602466742477014_n.jpg') no-repeat center center/cover;
+    /* background: url('./images/seller_banner_1.jpg') no-repeat center center/cover; */
+    /* background: url('./images/seller_banner_2.jpg') no-repeat center center/cover; */
+    background: url('./images/seller_banner_3.png') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
