--- a/Frontend/src/ProfileBox.module.css
+++ b/Frontend/src/ProfileBox.module.css
@@ -357,8 +357,13 @@
   height: 56px;
 }
 .buyerProfileDropdown {
+  border: 1px solid black;
+  box-shadow: 1px 2px 1px 4px rgb(194, 192, 192);
+  border-radius: 10px;
+  float: right;
+  position: relative;
   background-color: var(--white);
-  width: 411px;
+  width: 400px;
   height: 579px;
   overflow: hidden;
 }
