--- a/Frontend/src/Components/Navbar_seller.module.css
+++ b/Frontend/src/Components/Navbar_seller.module.css
@@ -7,10 +7,11 @@
 }
 .navbar {
     margin: auto;
-    width: 90%;
+    width: 100%;
     height: 115px;
     display: flex;
     flex-direction: column;
+    z-index: 100;
 }
 .upper {
     width: 100%;
@@ -39,6 +40,16 @@
     flex-direction: row;
     align-items: center;
     justify-content: end;
+}
+.upper .right .profile {
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+}
+.upper .right .profile > img {
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
 }
 .icons {
     margin: 0px 20px;
