Updated profile page

--- a/Frontend/src/BuyerProfile.module.css
+++ b/Frontend/src/BuyerProfile.module.css
@@ -1,74 +1,47 @@
-.emmanuelOyiboke {
+.name {
   border: 0;
   font-weight: 500;
-  font-family: var(--font-raleway);
-  font-size: var(--font-size-xl);
+  font-size: 16px;
   background-color: transparent;
   position: absolute;
   top: 254px;
-  left: 19px;
-  text-transform: capitalize;
+  left: 0px;
   color: var(--color-black);
   text-align: left;
   display: inline-block;
-  width: 216px;
+  width: 235px;
   height: 30px;
 }
-.pictureNameChild {
+.picture {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 25px;
   border-radius: 50%;
   width: 179.09px;
   height: 195.76px;
   object-fit: cover;
 }
-.changePhoto,
-.div {
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-size: 27.66px;
-  letter-spacing: -0.6px;
-  line-height: 23.96px;
-  font-weight: 500;
-  font-family: var(--font-poppins);
-  color: var(--color-darkslategray-100);
-  text-align: left;
-  display: inline-block;
-  width: 20.82px;
-}
-.changePhoto {
-  left: 35.5px;
-  font-size: 18.44px;
-  width: 131px;
-}
-.parent {
-  position: relative;
-  width: 166.5px;
-  height: 24px;
-}
+
 .pictureNameInner {
   cursor: pointer;
-  border: 0;
-  padding: var(--padding-xs);
-  background-color: rgba(22, 80, 105, 0.21);
-  position: absolute;
   top: 200px;
-  left: calc(50% - 117.5px);
-  border-radius: var(--br-7xs);
-  width: 218.61px;
-  height: 39.51px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
+  left: 10px;
+  position: absolute;
+  width: fit-content;
+  font-family: var(--font-family);
+  border-radius: 5px;
+  border: transparent;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  padding: 10px 38px;
+  font-size: 18px;
+  background-color: #999DEE;
+  color: white;
+  /* cursor: pointer; */
 }
 .pictureName {
   position: absolute;
-  top: 292px;
-  left: 217px;
+  top: 190px;
+  left: 160px;
   width: 235px;
   height: 284px;
 }
@@ -77,18 +50,23 @@
   top: 55px;
   letter-spacing: -1px;
   line-height: 58px;
-  font-weight: 500;
-  font-size: 80px;
+  /* font-weight: 500;
+  font-size: px; */
   display: inline-block;
   width: 880px;
-}
-.content {
   height: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+/* .content {
+  height: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+} */
 .border,
 .border1,
 .pageHeader {
@@ -97,7 +75,7 @@
   width: 100%;
 }
 .pageHeader {
-  top: 142px;
+  top: 5px;
   background-color: #f9f8f8;
   height: 112px;
   display: flex;
@@ -107,14 +85,15 @@
   padding: var(--padding-33xl) 0;
   box-sizing: border-box;
 }
-.border,
-.border1 {
-  top: 137px;
+.border {
+  top: 0px;
   background-color: #795AAC;
   height: 5px;
 }
 .border1 {
-  top: 254px;
+  top: 117px;
+  background-color: #795AAC;
+  height: 5px;
 }
 .footer {
   position: absolute;
@@ -123,12 +102,14 @@
 }
 .buyerProfile {
   position: relative;
+  margin: 0px 100px;
   background-color: #fcfcfc;
-  width: 100%;
-  height: 1327px;
+  /* top: 0px; */
+  /* width: 100%; */
+  height: 700px;
   overflow: hidden;
   text-align: center;
-  font-size: var(--font-size-5xl);
+  /* font-size: var(--font-size-5xl); */
   color: var(--color-black);
-  font-family: var(--button-medium);
+  /* font-family: var(--button-medium); */
 }
