--- a/Frontend/src/BuyerProfile.module.css
+++ b/Frontend/src/BuyerProfile.module.css
@@ -1,31 +1,41 @@
 .name {
   border: 0;
-  font-weight: 500;
+  /* font-weight: 500; */
   font-size: 16px;
-  background-color: transparent;
+  /* background-color: transparent; */
   position: absolute;
   top: 254px;
   left: 0px;
   color: var(--color-black);
-  text-align: left;
+  /* text-align: left;
   display: inline-block;
-  width: 235px;
-  height: 30px;
+  width: 300px;
+  height: 30px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 .picture {
   position: absolute;
   top: 0;
-  left: 25px;
+  /* left: 25px; */
   border-radius: 50%;
   width: 179.09px;
   height: 195.76px;
   object-fit: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .pictureNameInner {
   cursor: pointer;
   top: 200px;
-  left: 10px;
+  /* left: 10px; */
   position: absolute;
   width: fit-content;
   font-family: var(--font-family);
@@ -36,14 +46,24 @@
   font-size: 18px;
   background-color: #999DEE;
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   /* cursor: pointer; */
 }
 .pictureName {
   position: absolute;
   top: 190px;
-  left: 160px;
-  width: 235px;
+  left: 90px;
+  width: 400px;
   height: 284px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 .pageTitle {
   position: relative;
