--- a/Frontend/src/Components/Navbar_seller.module.css
+++ b/Frontend/src/Components/Navbar_seller.module.css
@@ -59,6 +59,22 @@
     gap: 5px;
     font-size: 1.2em;
 }
+.picture {
+    margin: 0px 10px;
+    display: flex;
+    align-items: center;
+    color: white;
+    background-color: #795AAC;
+    gap: 5px;
+    width: fit-content;
+    font-family: var(--font-family);
+    border-radius: 5px;
+    border: transparent;
+    /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
+    padding: 3px 15px;
+    font-size: 18px;
+    cursor: pointer;
+}
 .lower {
     width: 100%;
     height: 50%;
@@ -156,3 +172,15 @@
     border: 1px solid #ccc;
     border-radius: 30px;
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
