--- a/Frontend/src/Messaging.module.css
+++ b/Frontend/src/Messaging.module.css
@@ -1,37 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Hanken+Grotesk:wght@500;700;800&family=Inter&display=swap');
+
 :root {
     --primary-color: #795AAC;
-    --button : #999DEE;
+    --button: #999DEE;
     --Background: #E9E9E9;
     --text-color: White;
     --text: 'Han ken Grotesk', sans-serif;
 }
 
 .container {
-    width: 400px;
+    width: 450px;
     height: 600px;
     border: 1px solid red;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(100%,-34%);
+    top: 53%;
+    left: 45%;
+    transform: translate(100%, -40%);
     background-color: var(--Background);
     border-radius: 10px;
 }
+
 .container .top {
     width: 95%;
     height: 8%;
+    display: flex;
+    flex-direction: row;
     margin: auto;
     border: 1px solid blue;
     background-color: var(--text-color);
 }
-.container .top > p {
+
+.container .top .left {
+    width: 5%;
+    height: 100%;
+}
+
+.container .top .right {
+    width: 90%;
+    height: 100%;
+}
+
+.container .top .btn {
+    width: 5%;
+    height: 100%;
+    align-items: center;
+    font-size: 30px;
+}
+
+.container .top .right > p {
     font-family: var(--text);
     font-size: 1.3em;
     font-weight: 700;
-    float: right;
-    margin: 10px 0px;
+    margin: 10px 0px 10px 50px;
 }
+
 .container .middle {
     width: 95%;
     height: 87%;
@@ -43,32 +65,56 @@
     flex-direction: row;
     background-color: var(--text-color);
 }
+
 .container .middle .left {
-    width: 17%;
+    width: 17%; /* Set the initial width */
     height: 100%;
     border: 1px solid black;
+    z-index: 100;
+    transition: width 0.3s; /* Add a transition for smooth animation */
 }
+
+.container .middle .left:hover {
+    width: 40%; /* Set the expanded width on hover */
+    height: 100%;
+    border: 1px solid black;
+    transition: width 0.3s; /* Add a transition for smooth animation */
+}
+
 .container .middle .left .image {
     width: 80%;
     height: 10%;
     margin: 10px 5px;
-    
 }
+
 .container .middle .left .image > img {
     width: 100%;
     height: 100%;
-    border-radius: 30px
+    border-radius: 30px;
 }
+
 .container .middle .right {
-    width: 83%;
+    width: 83%; /* Set the initial width */
     height: 100%;
     border: 1px solid rgb(210, 30, 30);
+    transition: width 0.3s; /* Add a transition for smooth animation */
 }
+
+.container .middle .right:hover {
+    width: 60%; /* Set the narrowed width on hover */
+    height: 100%;
+    border: 1px solid rgb(210, 30, 30);
+    transition: width 0.3s; /* Add a transition for smooth animation */
+}
+
 .container .middle .right .up {
     width: 100%;
     height: 90%;
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
 }
+
 .container .middle .right .down {
     width: 100%;
     height: 10%;
@@ -77,6 +123,7 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
 .container .middle .right .down > input {
     width: 76%;
     height: 60%;
@@ -84,6 +131,7 @@
     margin: auto;
     border: 1px solid rgb(0, 0, 0);
 }
+
 .container .middle .right .down > button {
     margin: auto;
     width: 20%;
