--- a/Frontend/src/Registration.module.css
+++ b/Frontend/src/Registration.module.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Hanken+Grotesk:wght@500;700;800&family=Inter&display=swap');
+
+:root {
+    --primary-color: #795AAC;
+    --button: #999DEE;
+    --Background: #E9E9E9;
+    --text-color: White;
+    --text: 'Han ken Grotesk', sans-serif;
+}
+
 .body {
     background-color: red;
     position: relative;
@@ -42,6 +52,46 @@
 
 }
 
+
+
+
+
+
+
+.middle {
+    border: 2px solid var(--primary-color);
+    width: 200px;
+    height: 150px;
+    margin: 30px 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5em;
+    border-radius: 10px;
+}
+.middle .pic {
+    width: 100%;
+    height: 100%;
+}
+.middle .pic img {
+    width: 100%;
+    height: 100%;
+}
+.imgbox {
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 .right {
     width: 80%;
     height: 80%;
@@ -70,10 +120,10 @@
 .rightForm {
     width: 40%;
     height: 100%;
-    margin: 0px 0px 0px 100px;
+    
 }
 
-input {
+input,select {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
