--- a/Frontend/src/Authentication.module.css
+++ b/Frontend/src/Authentication.module.css
@@ -11,10 +11,22 @@
     background-color: rgb(0, 0, 0,0.5);
     z-index: 100;
     position: fixed;
+
+    /* width: 40%;
+    height: 400px; */
+    margin: auto;
+    /* background-color: var(--text); */
+    border-radius: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border: 1px solid black;
+    z-index: 1;
+    /* position: relative; */
 }
-.back .container {
+.container {
     position: fixed;
-    width: 40%;
+    width: 30%;
     height: 400px;
     margin: auto;
     background-color: var(--text);
