--- a/Frontend/src/AddAProductPage.module.css
+++ b/Frontend/src/AddAProductPage.module.css
@@ -5,8 +5,8 @@
 }
 .linkToAddProductDescriptio {
   position: absolute;
-  top: 1829px;
-  left: 940px;
+  top: 1655px;
+  left: 980px;
   width: 400px;
   height: 19px;
   color: var(--black-900);
@@ -25,8 +25,8 @@
   padding: var(--padding-sm) var(--padding-23xl);
   background-color: var(--primary);
   position: absolute;
-  top: 1755px;
-  left: 1034px;
+  top: 1581px;
+  left: 1074px;
   border-radius: var(--br-8xs);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   height: 50px;
@@ -39,7 +39,7 @@
 }
 .preview {
   background-color: var(--button);
-  left: 1188px;
+  left: 1228px;
 }
 .formelementstitle {
   align-self: stretch;
@@ -92,7 +92,7 @@
   position: relative;
   line-height: 26px;
 }
-.pricing,
+
 .taka {
   position: absolute;
   box-sizing: border-box;
@@ -112,8 +112,11 @@
   padding: var(--padding-sm) 18px;
 }
 .pricing {
-  top: 1099px;
-  left: 813px;
+  position: absolute;
+  box-sizing: border-box;
+  overflow: hidden;
+  top: 925px;
+  left: 853px;
   border-radius: var(--br-9xs);
   border: 1px solid var(--border);
   width: 527px;
@@ -305,7 +308,7 @@
   left: 127px;
   width: 24px;
 }
-.image,
+
 .moreImage {
   position: absolute;
   top: 414px;
@@ -314,8 +317,9 @@
   color: var(--color-black);
 }
 .image {
-  top: 523px;
-  left: 810px;
+  position: absolute;
+  top: 349px;
+  left: 850px;
   border-radius: var(--br-9xs);
   border: 1px solid var(--border);
   box-sizing: border-box;
@@ -435,7 +439,7 @@
   gap: var(--gap-5xs);
   text-align: center;
 }
-.links,
+/* .links,
 .linksWrapper {
   display: flex;
   flex-direction: row;
@@ -452,7 +456,7 @@
   justify-content: flex-end;
   padding: 0 var(--padding-17xl);
   box-sizing: border-box;
-}
+} */
 .getStarted1 {
   position: relative;
   font-size: var(--button-xsmall-size);
@@ -540,7 +544,7 @@
   height: 88px;
   color: var(--color-black);
 }
-.navbar20 {
+/* .navbar20 {
   position: absolute;
   width: 100%;
   top: 0;
@@ -552,7 +556,7 @@
   justify-content: flex-start;
   font-size: var(--button-xsmall-size);
   color: var(--white);
-}
+} */
 .handicraft768x4321Icon {
   position: absolute;
   top: 0;
@@ -564,7 +568,7 @@
 }
 .addYourCrafts {
   position: relative;
-  font-size: var(--font-size-xl);
+  font-size: var(--fnavbaront-size-xl);
   line-height: 26px;
   font-family: var(--text-16px-regular);
 }
@@ -580,8 +584,8 @@
 }
 .headerBanner {
   position: absolute;
-  top: 174px;
-  left: 100px;
+  top: 0px;
+  left: 140px;
   background-color: var(--color-black);
   width: 1240px;
   height: 322px;
@@ -883,8 +887,8 @@
 }
 .stContainer {
   position: absolute;
-  top: 513px;
-  left: 100px;
+  top: 339px;
+  left: 140px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -1041,7 +1045,7 @@
   position: relative;
   background-color: var(--white);
   width: 100%;
-  height: 2297px;
+  height: 1760px;
   overflow-y: auto;
   text-align: left;
   font-size: var(--text-16px-regular-size);
