--- a/Frontend/src/ProductListing.module.css
+++ b/Frontend/src/ProductListing.module.css
@@ -58,16 +58,47 @@
     color: white;
 }
 .product-list{
+    border: 2px solid red;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 30px;
     margin: 30px 0px;
+    width: 982px;
 }
 .container{
+    /* border: 2px solid black; */
     margin: 0px 100px;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+}
+.filter{
+    border: 2px solid yellow;
+    margin: 30px 0px;
+    /* width: 23%; */
+    width: 303px;
+
+}
+.filter-and-products{
+    border: 2px solid violet;
+    display: flex;
+    /* gap: 20px; */
+    justify-content: space-between;
+}
+.categories-list input{
+    margin: 0;
+}
+.categories-list{
+    margin-bottom: 5px;
+}
+.categories-list li{
+    margin-bottom: 3px;
+}
+
+.filter-heading{
+    font-size: 1.5em;
+    font-weight: 700;
+    margin-bottom: 10px;
 }
