--- a/Frontend/src/ProductListing.module.css
+++ b/Frontend/src/ProductListing.module.css
@@ -47,25 +47,20 @@
 }
 
 .button {
-    width: fit-content;
-    font-family: var(--font-family);
-    border-radius: 5px;
-    border: transparent;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    padding: 10px 38px;
-    font-size: 18px;
-    background-color: var(--primary-color);
-    color: white;
+    border: 2px solid red;
 }
 .product-list{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 30px;
     margin: 30px 0px;
+    /* padding: 10px 15px; */
     width: 982px;
+    /* border: 2px solid var(--border-color);
+    border-radius: 7px; */
 }
 .container{
     /* border: 2px solid black; */
@@ -75,14 +70,29 @@
     flex-grow: 1;
 }
 .filter{
-    border: 2px solid yellow;
+    border: 2px solid var(--border-color);
+    border-radius: 7px;
     margin: 30px 0px;
+    padding: 10px 15px;
     /* width: 23%; */
     width: 303px;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    gap: 25px;
 
 }
+.collapsible-menu{
+    /* border: 2px solid aquamarine; */
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+/* .filter > *{
+    margin: 10px 0px;
+} */
 .filter-and-products{
-    border: 2px solid violet;
+    /* border: 2px solid violet; */
     display: flex;
     /* gap: 20px; */
     justify-content: space-between;
@@ -101,4 +111,9 @@
     font-size: 1.5em;
     font-weight: 700;
     margin-bottom: 10px;
+}
+
+.price-range{
+    display: flex;
+    gap: 15px;
 }
