message version-1 added

--- a/Frontend/src/Components/Navbar_seller.module.css
+++ b/Frontend/src/Components/Navbar_seller.module.css
@@ -135,6 +135,7 @@
     display: none;
     background-color: var(--Background);
     list-style-type: none;
+    
     padding: 0;
   }
   
@@ -144,11 +145,12 @@
   
   .dropdown-item {
     padding: 10px;
-    color: #fff;
+    color: #000000;
   }
   
   .dropdown-item:hover {
     background-color: #000000;
+    color: #fff;
   }
   
 
