--- a/Frontend/src/Components/messagebox_2.module.css
+++ b/Frontend/src/Components/messagebox_2.module.css
@@ -10,7 +10,7 @@
 .box {
     border: 1px solid #ccc;
     padding: 10px;
-    margin: 10px;
+
     /*display: inline-block;*/
     background: var(--Background);
     border-radius: 30px;
@@ -19,6 +19,7 @@
     min-width: 50px;
     max-width: 90%; 
     float: right;
+    align-items: right;
   }
   
 
