--- a/Frontend/src/Messaging.module.css
+++ b/Frontend/src/Messaging.module.css
@@ -11,38 +11,39 @@
 .container {
     width: 450px;
     height: 600px;
-    border: 1px solid red;
-    position: absolute;
+    position: fixed;
     top: 53%;
     left: 45%;
     transform: translate(100%, -40%);
     background-color: var(--Background);
     border-radius: 10px;
+    z-index: 100;
+
 }
 
 .container .top {
     width: 95%;
-    height: 8%;
+    height: 7%;
     display: flex;
     flex-direction: row;
     margin: auto;
-    border: 1px solid blue;
     background-color: var(--text-color);
+
 }
 
-.container .top .left {
-    width: 5%;
-    height: 100%;
-}
 
 .container .top .right {
-    width: 90%;
+    width: 100%;
     height: 100%;
+    border: 1px solid rgb(0, 0, 0);
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 2px 2px 2px var(--primary-color);
+    background: border-box;
 }
 
-.container .top .btn {
-    width: 5%;
-    height: 100%;
+.container .top .right .btn {
+
     align-items: center;
     font-size: 30px;
 }
@@ -51,12 +52,12 @@
     font-family: var(--text);
     font-size: 1.3em;
     font-weight: 700;
-    margin: 10px 0px 10px 50px;
+    margin: 10px 0px 10px 70px;
 }
 
 .container .middle {
     width: 95%;
-    height: 87%;
+    height: 88%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -71,6 +72,7 @@
     height: 100%;
     border: 1px solid black;
     cursor: pointer;
+    box-shadow: inset -3px 0px 5px cadetblue;
 }
 
 
@@ -80,7 +82,7 @@
     margin: 10px 5px;
     display: flex;
     flex-direction: row;
-    border: 1px solid red;
+
 }
 
 .container .middle .left .image > img {
@@ -89,16 +91,18 @@
     border-radius: 30px;
 }
 .container .middle .left .image > p {
-    font-size: 1.7em;
+    font-size: 20px;
+    margin-left: 4px;
+    font-weight: 500;
     text-align: center;
     word-wrap: break-word;
-    margin-top: 8px;
+    margin-top: 14px;
 }
 .container .middle .right {
     width: 83%;
     height: 100%;
-    border: 1px solid rgb(210, 30, 30);
     background-color: aliceblue;
+   
 }
 
 
@@ -106,17 +110,18 @@
 .container .middle .right .up {
     width: 100%;
     height: 90%;
-    border: 1px solid black;
-
+    overflow-y: scroll;
 }
 
 .container .middle .right .down {
-    width: 100%;
+    width: 83%;
     height: 10%;
     border: 1px solid black;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: fixed;
+    background-color: white;
 }
 
 .container .middle .right .down > input {
