Added individual know the craft page

--- a/Frontend/src/Components/Card.module.css
+++ b/Frontend/src/Components/Card.module.css
@@ -29,7 +29,7 @@
 }
 .card img{
     width: 228px;
-    max-height: 304px;
+    height: 304px;
 }
 .card p {
     overflow: hidden; /* Hide overflow content */
