--- a/Frontend/src/KnowTheCraft.module.css
+++ b/Frontend/src/KnowTheCraft.module.css
@@ -62,14 +62,14 @@
 
 .button {
     width: fit-content;
-    font-family: var(--font-family);
-    border-radius: 5px;
-    border: 1px solid black;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    padding: 8px 25px;
-    font-size: 18px;
+    /* font-family: var(--font-family); */
+    /* border-radius: 5px; */
+    /* border: 1px solid black;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);*/
+    padding: 8px 25px; 
+    /* font-size: 18px; */
     /* background-color: var(--button-color); */
-    color: black;
+    color: white;
     cursor: pointer;
 }
 .button:active{
