--- a/Frontend/src/AddAProductPage.module.css
+++ b/Frontend/src/AddAProductPage.module.css
@@ -25,8 +25,8 @@
   padding: var(--padding-sm) var(--padding-23xl);
   background-color: var(--primary);
   position: absolute;
-  top: 1581px;
-  left: 1074px;
+  top: 1620px;
+  left: 1174px;
   border-radius: var(--br-8xs);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   height: 50px;
@@ -115,7 +115,7 @@
   position: absolute;
   box-sizing: border-box;
   overflow: hidden;
-  top: 925px;
+  top: 1372px;
   left: 853px;
   border-radius: var(--br-9xs);
   border: 1px solid var(--border);
@@ -619,7 +619,7 @@
   align-self: stretch;
   border-radius: var(--br-7xs);
   box-sizing: border-box;
-  height: 250px;
+  height: 100px;
   overflow: hidden;
   flex-shrink: 0;
   flex-direction: row;
@@ -658,9 +658,15 @@
   left: 55px;
   gap: var(--gap-base);
 }
-.description2 {
+.description3 {
   position: absolute;
   top: 30px;
+  left: 24px;
+  line-height: 26px;
+}
+.description2 {
+  position: absolute;
+  top: 70px;
   left: 24px;
   line-height: 26px;
 }
@@ -770,6 +776,18 @@
   gap: var(--gap-base);
   font-size: var(--button-xsmall-size);
 }
+.color3 {
+  position: absolute;
+  top: 360px;
+  left: 54px;
+  width: 412px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: var(--gap-base);
+  font-size: var(--button-xsmall-size);
+}
 .elementsfilterSectiontitle1 {
   position: relative;
   width: 254px;
@@ -788,6 +806,7 @@
   display: none;
 }
 .hello {
+  width: 240px;
   line-height: 22px;
 }
 .elementsswatchessinglebutto,
@@ -851,7 +870,7 @@
 }
 .color2 {
   position: absolute;
-  top: 226px;
+  top: 176px;
   left: 54px;
   width: 412px;
   justify-content: flex-start;
@@ -869,7 +888,7 @@
 }
 .location1 {
   position: absolute;
-  top: 74px;
+  top: 110px;
   left: 54px;
   display: flex;
   flex-direction: column;
@@ -1051,4 +1070,165 @@
   font-size: var(--text-16px-regular-size);
   color: var(--color-black);
   font-family: var(--text-16px-regular);
+}
+
+.right {
+  position: absolute;
+  top: 370px;
+  left: 790px;
+  /* top: 1200px; */
+  width: 39%;
+  height: 50%;
+  margin: 5px;
+  background-color: var(--Background);
+  padding: 20px 100px 20px 20px;
+}
+.right .text {
+  width: 96%;
+
+  margin-left: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  
+}
+.right .text > h3 {
+  font-size: 1.5em;
+  font-weight: 700;
+  word-spacing: 10px;
+  margin-bottom: 10px;
+  
+}
+.right .text > p {
+  font-size: 1.1em;
+  font-weight: 300;
+  word-wrap: break-word;
+}
+.right .image {
+  /* margin: 0px auto; */
+  left: 40px;
+  top: 120px;
+  width: 100%;
+  height: 500px;
+  background-color: white;
+  position: relative;
+  margin-bottom: 15px;
+}
+.right .image .inner {
+  margin: auto;
+  width: 90%;
+  height: 90%;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,5%);
+}
+.right .image .inner .up {
+  width: 98%;
+  height: 40%;
+  border: 2px dotted var(--button);
+  margin-bottom:10px ;
+}
+.right .image .inner > .down {
+  width: 100%;
+  height: 40%;
+  display: flex;
+  flex-direction: row;
+}
+.right .image .inner .down .left2 {
+  width: 49%;
+  height: 100%;
+  border: 2px dotted var(--button);
+  margin-right: 5px;
+}
+
+
+
+
+.right .image .inner .down .left2,
+.right .image .inner .down .right2 {
+  position: relative;
+}
+.right .image .inner .down .left2 .pic,
+.right .image .inner .down .right2 .pic{
+  width: 100%;
+  height: 100%;
+}
+.right .image .inner .down .left2 .pic i,
+.right .image .inner .down .right2 .pic i{
+  
+  font-size: 2.5em;
+  position: absolute;
+  text-align: center;
+  top: 60px;
+  left: 40%;
+  color: #a9bfe5;
+}
+.right .image .inner .down .left2 .pic > p,
+.right .image .inner .down .right2 .pic > p {
+  text-align: center;
+  font-size: 1.3em;
+  font-weight: 400;
+  margin-top: 20px;
+}
+.right .image .inner .down .left2 .pic img,
+.right .image .inner .down .right2 .pic img {
+  width: 100%;
+  height: 100%;
+}
+
+.right .image .inner .down .right2 {
+  width: 49%;
+  height: 100%;
+  border: 2px dotted var(--button);
+  margin-right: 5px;
+}
+/* for image*/
+.right .image .inner .up {
+  position: relative;
+}
+.right .image .inner .up .pic {
+  width: 100%;
+  height: 100%;
+}
+.right .image .inner .up .pic i{
+  
+  font-size: 2.5em;
+  position: absolute;
+  text-align: center;
+  top: 60px;
+  left: 45%;
+  color: #a9bfe5;
+}
+.right .image .inner .up .pic > p {
+  text-align: center;
+  font-size: 1.3em;
+  font-weight: 400;
+  margin-top: 20px;
+}
+.right .image .inner .up .pic img {
+  width: 100%;
+  height: 100%;
+}
+.imgbox {
+  display: none;
+}
+
+
+
+.right .note{
+  top: 670px;
+  /* left: 10px; */
+  position: absolute;
+}
+
+
+.right .note h2{
+  color: red;
+  font-weight: 700;
+  font-size: 1.2em;
+  filter: brightness(10px);
+  margin: 5px 0px;
+}
+.right .note p{
+  font-size: 1.2em;
+  font-weight: 500;
 }
