--- a/Frontend/src/Community_home.module.css
+++ b/Frontend/src/Community_home.module.css
@@ -5,3 +5,50 @@
     --Background: #E9E9E9;
     --text: White;
 }
+.container {
+    width: 1300px;
+    height: 90vh;
+    border: 1px solid red;
+    margin: auto;
+    box-shadow: -3px 3px 3px red;
+}
+.container .up {
+    width: 100%;
+    height: 90%;
+    overflow-y: scroll;
+}
+.container .down {
+    width: 100%;
+    height: 60px;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: white;
+}
+.container .down .image {
+    width: 5%;
+    height: auto;
+    margin: auto 24px;
+}
+.container .down .image > i {
+    font-size: 40px;
+    font-weight: 700;
+    margin: 0px 20px;
+}
+.container .down > input {
+    width: 65%;
+    height: 60%;
+    border-radius: 20px;
+    margin: auto;
+    border: 1px solid rgb(0, 0, 0);
+}
+
+.container .down > button {
+    margin: auto;
+    width: 20%;
+    height: 60%;
+    border-radius: 10px;
+    background-color: var(--button);
+    color: var(--text-color);
+}
