--- a/Frontend/src/Components/message_pic.module.css
+++ b/Frontend/src/Components/message_pic.module.css
@@ -6,6 +6,7 @@
     --text: White;
     --font: 'Han ken Grotesk', sans-serif;
 }
+
 .another {
   width: 100%;
   height: auto;
@@ -27,6 +28,7 @@
     width: 40%;
     height: 100%;
     margin-left: 10px;
+    border: 2px solid var(--Background);
 }
 .another .anotherone .text {
   margin: 5px 2px;
@@ -53,15 +55,11 @@
     height: 100%;
 }
 .another .anotherone .box {
-    margin-top: 5px;
+    margin-bottom: 5px;
     width: 100%;
     height: 20%;
     padding: 10px;
     display: inline-block;
-    background: var(--primary-color);
-    border-radius: 0px 0px 0px 37px;
-    -webkit-border-radius: 0px 0px 0px 37px;
-    -moz-border-radius: 0px 0px 0px 37px;
     word-wrap: break-word; 
     white-space: normal; 
   }
@@ -71,7 +69,17 @@
     font-family: var(--font);
     font-size: 1.1em;
     font-weight: 400;
-    color: var(--text); 
+  }
+  .another .anotherone .like {
+    width: 100%;
+    height: auto;
+    margin: 3px 0px;
+    border: 1px solid rgb(180, 179, 180);
+  }
+  .another .anotherone .like > i{
+    margin-top: 10px;
+    font-size: 2.9em;
+    margin-left: 230px;
   }
 
   
