--- a/Frontend/src/Components/message_txt.module.css
+++ b/Frontend/src/Components/message_txt.module.css
@@ -29,7 +29,7 @@
     height: 100%;
     margin-left: 10px;
     border-radius: 10px ;
-    background-color: var(--Background);
+    border: 2px solid var(--Background);
 }
 .another .anotherone .text {
   margin: 5px 2px;
@@ -61,7 +61,6 @@
     height: 20%;
     padding: 10px;
     display: inline-block;
-    background: var(--primary-color);
     word-wrap: break-word; 
     white-space: normal; 
   }
@@ -71,7 +70,17 @@
     font-family: var(--font);
     font-size: 1.1em;
     font-weight: 400;
-    color: var(--text); 
+  }
+  .another .anotherone .like {
+    width: 100%;
+    height: auto;
+    margin: 3px 0px;
+    border: 1px solid rgb(180, 179, 180);
+  }
+  .another .anotherone .like > i{
+    margin-top: 10px;
+    font-size: 2.5em;
+    margin-left: 230px;
   }
 
   
