--- a/Frontend/src/KnowTheCraft.module.css
+++ b/Frontend/src/KnowTheCraft.module.css
@@ -147,9 +147,24 @@
 
 .sort-and-filter{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     border: 2px solid var(--border-color);
     gap: 20px;
     padding: 5px 15px;
     border-radius: 7px;
     width: 100%;
+}
+.sort-selection {
+    width: fit-content;
+    margin: 0;
+    padding: 5px 9px;
+    border: 2px solid var(--border-color);
+}
+
+.sort-selection:focus,
+.sort-selection:focus-visible,
+.sort-selection:focus-within {
+    box-shadow: none;
+    border: 2px solid var(--accent-color);
 }
