--- a/Frontend/src/ProductListing.module.css
+++ b/Frontend/src/ProductListing.module.css
@@ -49,7 +49,8 @@
 .button {
     border: 2px solid red;
 }
-.product-list{
+
+.product-list {
     /* border: 2px solid red; */
     display: flex;
     flex-direction: column;
@@ -62,14 +63,16 @@
     /* border: 2px solid var(--border-color);
     border-radius: 7px; */
 }
-.container{
+
+.container {
     /* border: 2px solid black; */
     margin: 0px 100px;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
 }
-.filter{
+
+.filter {
     border: 2px solid var(--border-color);
     border-radius: 7px;
     margin: 30px 0px;
@@ -82,46 +85,73 @@
     gap: 25px;
 
 }
-.collapsible-menu{
+
+.collapsible-menu {
     /* border: 2px solid aquamarine; */
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
+
 /* .filter > *{
     margin: 10px 0px;
 } */
-.filter-and-products{
+.filter-and-products {
     /* border: 2px solid violet; */
     display: flex;
     /* gap: 20px; */
     justify-content: space-between;
 }
-.categories-list input{
+
+.categories-list input {
     margin: 0;
 }
-.categories-list{
+
+.categories-list {
     margin-bottom: 5px;
 }
-.categories-list li{
+
+.categories-list li {
     margin-bottom: 3px;
 }
 
-.filter-heading{
+.filter-heading {
     font-size: 1.5em;
     font-weight: 700;
     margin-bottom: 10px;
 }
 
-.price-range{
+.price-range {
     display: flex;
     gap: 15px;
 }
-.sort-and-filter{
+
+.sort-and-filter {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     border: 2px solid var(--border-color);
     gap: 20px;
     padding: 5px 15px;
     border-radius: 7px;
     width: 100%;
 }
+
+.sort-selection {
+    width: fit-content;
+    margin: 0;
+    padding: 5px 9px;
+    border: 2px solid var(--border-color);
+}
+
+.sort-selection:focus,
+.sort-selection:focus-visible,
+.sort-selection:focus-within {
+    box-shadow: none;
+    border: 2px solid var(--accent-color);
+}
+
+/* .sort-option:hover, .sort-option-selected{
+    background-color: var(--accent-color) !important;
+    color: white;
+} */
