--- a/Frontend/src/IndividualProduct.module.css
+++ b/Frontend/src/IndividualProduct.module.css
@@ -77,6 +77,7 @@
     height: 200px;
     overflow: hidden;
     border-radius: 3px;
+    cursor: pointer;
 }
 .image-gallary img{
     width: 100%;
