--- a/Frontend/src/BuyerProfile.module.css
+++ b/Frontend/src/BuyerProfile.module.css
@@ -59,10 +59,10 @@
   left: 90px;
   width: 400px;
   height: 284px;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
   text-align: center;
 }
 .pageTitle {
