--- a/Frontend/src/KnowTheCraft.module.css
+++ b/Frontend/src/KnowTheCraft.module.css
@@ -15,7 +15,7 @@
 
 .hero-section::before {
     content: "";
-    background: url('/images/crafts1.webp') no-repeat center center/cover;
+    background: url('https://res.cloudinary.com/dkotituzn/image/upload/v1701183120/upmvlr85ovihmilzexfs.webp') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
