--- a/Frontend/src/login.module.css
+++ b/Frontend/src/login.module.css
@@ -66,7 +66,7 @@
 
 .title::before {
     content: "";
-    background: url('./images/383627730_327638939837586_3616602466742477014_n.jpg') no-repeat center center/cover;
+    background: url('https://res.cloudinary.com/dkotituzn/image/upload/v1701182544/cbx5lzq5cu73sudwwqql.jpg') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
